# PyVicsek

./: README.md  pyproject.toml  requirements.txt
scripts/: main.py  random_init.py
scripts/basic phase transition/: equilibration.py  phase_transition.py
scripts/heterogeneous/: phase_transition.py
scripts/heterogeneous/antagonistic/: cross_correlations.npy  equilibrate.py  gif.py  global_fluctuations.npy  global_order.npy  phase.py  type_fluctuations.npy  type_orders.npy
scripts/heterogeneous/asymmetric/: cross_correlations.npy  equilibrate.py  global_fluctuations.npy  global_order.npy  phase.py  plot.py  type_fluctuations.npy  type_orders.npy
scripts/heterogeneous/cooperative/: cross_correlations.npy  equilibrate.py  global_fluctuations.npy  global_order.npy  phase.py  plot.py  type_fluctuations.npy  type_orders.npy
scripts/heterogeneous/hierarchical/: cross_correlations.npy  equilibrate.py  global_fluctuations.npy  global_order.npy  phase.py  plot.py  type_fluctuations.npy  type_orders.npy
scripts/homogeneous/: basic.py
tests/: test_cell_list.py
vicsek/: core.py  pyproject.toml
vicsek/models/: heterogeneous.py  particle.py  vicsek.py  viscek.py
vicsek/util/: cell_list.py  factory.py
viscek/models/: particle.py
viscek/util/: cell_list.py
