[project]
name = "viscek"
version = "0.0.0"
dependencies = [
  "numba",
  "numpy",
  "scipy",
  "matplotlib",
  "shapely"
]
requires-python = ">=3.10"
authors = [
    {name = "Mehtan Rahman", email = "mehtan.rahman@utexas.edu"},
]
maintainers = [
    {name = "Mehtan Rahman", email = "mehtan.rahman@utexas.edu"},
]
#description = "Python Distribution of "
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/mehtan-rahman/Viscek-Model"